Use "figure" environment for illustrations and add more of them.

--- a/tex/p039.tex
+++ b/tex/p039.tex
@@ -95,6 +95,11 @@
 \vs p039 5:12 The erroneous idea that angels possess wings is not wholly due to olden notions that they must have wings to fly through the air. Human beings have sometimes been permitted to observe seraphim that were being prepared for transport service, and the traditions of these experiences have largely determined the Urantian concept of angels. In observing a transport seraphim being made ready to receive a passenger for interplanetary transit, there may be seen what are apparently double sets of wings extending from the head to the foot of the angel. In reality these wings are energy insulators --- friction shields.
 \vs p039 5:13 \pc When celestial beings are to be enseraphimed for transfer from one world to another, they are brought to the headquarters of the sphere and, after due registry, are inducted into the transit sleep. Meantime, the transport seraphim moves into a horizontal position immediately above the universe energy pole of the planet. While the energy shields are wide open, the sleeping personality is skillfully deposited, by the officiating seraphic assistants, directly on top of the transport angel. Then both the upper and lower pairs of shields are carefully closed and adjusted.
 \vs p039 5:14 And now, under the influence of the transformers and the transmitters, a strange metamorphosis begins as the seraphim is made ready to swing into the energy currents of the universe circuits. To outward appearance the seraphim grows pointed at both extremities and becomes so enshrouded in a queer light of amber hue that very soon it is impossible to distinguish the enseraphimed personality. When all is in readiness for departure, the chief of transport makes the proper inspection of the carriage of life, carries out the routine tests to ascertain whether or not the angel is properly encircuited, and then announces that the traveller is properly enseraphimed, that the energies are adjusted, that the angel is insulated, and that everything is in readiness for the departing flash. The mechanical controllers, two of them, next take their positions. By this time the transport seraphim has become an almost transparent, vibrating, torpedo\hyp{}shaped outline of glistening luminosity. Now the transport dispatcher of the realm summons the auxiliary batteries of the living energy transmitters, usually 1,000 in number; as he announces the destination of the transport, he reaches out and touches the near point of the seraphic carriage, which shoots forward with lightninglike speed, leaving a trail of celestial luminosity as far as the planetary atmospheric investment extends. In less than 10 minutes the marvellous spectacle will be lost even to reinforced seraphic vision.
+\begin{figure}[H]
+\centering
+\includegraphics[scale=\tunemarkup{pgkoboaurahd}{0.4}\tunemarkup{pghanlin}{0.35}\tunemarkup{pgnexus7}{0.32}\tunemarkup{pgkindledx}{0.27}]{../urantia-pictures/Troy-Bishop/transport_seraphim_700x525h.jpg}
+\caption{Transport Seraphim by Troy~R.~Bishop}
+\end{figure}
 \vs p039 5:15 \pc While planetary space reports are received at noon at the meridian of the designated spiritual headquarters, the transporters are dispatched from this same place at midnight. That is the most favourable time for departure and is the standard hour when not otherwise specified.
 \vs p039 5:16 \ublistelem{6.}\bibnobreakspace \bibemph{The Recorders.} These are the custodians of the major affairs of the planet as it functions as a part of the system, and as it is related to, and concerned in, the universe government. They function in the recording of planetary affairs but are not concerned with matters of individual life and existence.
 \vs p039 5:17 \ublistelem{7.}\bibnobreakspace \bibemph{The Reserves.} The Satania reserve corps of the planetary seraphim is maintained on Jerusem in close association with the reserves of the Material Sons. These abundant reserves repletely provide for every phase of the manifold activities of this seraphic order. These angels are also the personal message bearers of the local systems. They serve transition mortals, angels, and the Material Sons as well as others domiciled on the system headquarters. While Urantia is, at present, outside the spiritual circuits of Satania and Norlatiadek, you are otherwise in intimate touch with interplanetary affairs, for these messengers from Jerusem frequently come to this world as to all the other spheres of the system.
