--- a/tex/p122.tex
+++ b/tex/p122.tex
@@ -18,6 +18,13 @@
 \vs p122 2:8 From his earliest infancy John was judiciously impressed by his parents with the idea that he was to grow up to become a spiritual leader and religious teacher. And the soil of John’s heart was ever responsive to the sowing of such suggestive seeds. Even as a child he was found frequently at the temple during the seasons of his father’s service, and he was tremendously impressed with the significance of all that he saw.
 \usection{3.\bibnobreakspace Gabriel’s Announcement to Mary}
 \vs p122 3:1 One evening about sundown, before Joseph had returned home, Gabriel appeared to Mary by the side of a low stone table and, after she had recovered her composure, said: “I come at the bidding of one who is my Master and whom you shall love and nurture. To you, Mary, I bring glad tidings when I announce that the conception within you is ordained by heaven, and that in due time you will become the mother of a son; you shall call him Joshua, and he shall inaugurate the kingdom of heaven on earth and among men. Speak not of this matter\fnst{\textbf{Speak not of this matter}, Note that no such warning was given by Gabriel to Elizabeth --- clearly the life of Jesus was in even greater danger than that of John.} save to Joseph and to Elizabeth, your kinswoman, to whom I have also appeared, and who shall presently also bear a son, whose name shall be John, and who will prepare the way for the message of deliverance which your son shall proclaim to men with great power and deep conviction. And doubt not my word, Mary, for this home has been chosen as the mortal habitat of the child of destiny. My benediction rests upon you, the power of the Most Highs will strengthen you, and the Lord of all the earth shall overshadow you.”
+\tunemarkup{private}{%
+\begin{figure}[H]
+\centering
+\includegraphics[scale=\tunemarkup{pgkoboaurahd}{0.52}\tunemarkup{pghanlin}{0.42}\tunemarkup{pgnexus7}{0.47}\tunemarkup{pgkindledx}{0.36}]{../urantia-pictures/Henry_Ossawa_Tanner_The_Annunciation_525.jpg}
+\caption{The Annunciation by Henry~Ossawa~Tanner}
+\end{figure}
+}
 \vs p122 3:2 \pc Mary pondered this visitation secretly in her heart for many weeks until of a certainty she knew she was with child, before she dared to disclose these unusual events to her husband. When Joseph heard all about this, although he had great confidence in Mary, he was much troubled and could not sleep for many nights. At first Joseph had doubts about the Gabriel visitation. Then when he became well\hyp{}nigh persuaded that Mary had really heard the voice and beheld the form of the divine messenger, he was torn in mind as he pondered how such things could be. How could the offspring of human beings be a child of divine destiny? Never could Joseph reconcile these conflicting ideas until, after several weeks of thought, both he and Mary reached the conclusion that they had been chosen to become the parents of the Messiah, though it had hardly been the Jewish concept that the expected deliverer was to be of divine nature. Upon arriving at this momentous conclusion, Mary hastened to depart for a visit with Elizabeth.
 \vs p122 3:3 Upon her return, Mary went to visit her parents, Joachim and Hannah. Her two brothers and two sisters, as well as her parents, were always very sceptical about the divine mission of Jesus, though, of course, at this time they knew nothing of the Gabriel visitation. But Mary did confide to her sister Salome that she thought her son was destined to become a great teacher.
 \vs p122 3:4 \pc Gabriel’s announcement to Mary was made the day following the conception of Jesus and was the only event of supernatural occurrence connected with her entire experience of carrying and bearing the child of promise.
@@ -53,7 +60,13 @@
 \vs p122 7:8 Joseph had thought to go out at once and enrol, but Mary was weary; she was considerably distressed and besought him to remain by her side, which he did.
 \usection{8.\bibnobreakspace The Birth of Jesus}
 \vs p122 8:1 All that night Mary was restless so that neither of them slept much. By the break of day the pangs of childbirth were well in evidence, and at noon, August 21, 7\,B.C., with the help and kind ministrations of women fellow travellers, Mary was delivered of a male child. Jesus of Nazareth was born into the world, was wrapped in the clothes which Mary had brought along for such a possible contingency, and laid in a near\hyp{}by manger.
-\tunemarkup{private}{\begin{center}\includegraphics[scale=\tunemarkup{pgkoboaurahd}{0.52}\tunemarkup{pghanlin}{0.46}\tunemarkup{pgnexus7}{0.45}\tunemarkup{pgkindledx}{0.36}]{../urantia-pictures/Son-of-Man-Son-of-God.jpg}\end{center}}
+\tunemarkup{private}{%
+\begin{figure}[H]
+\centering
+\includegraphics[scale=\tunemarkup{pgkoboaurahd}{0.52}\tunemarkup{pghanlin}{0.46}\tunemarkup{pgnexus7}{0.45}\tunemarkup{pgkindledx}{0.36}]{../urantia-pictures/Son-of-Man-Son-of-God.jpg}
+\caption{Son of Man, Son of God by Jeremy~Winborg}
+\end{figure}
+}
 \vs p122 8:2 In just the same manner as all babies before that day and since have come into the world, the promised child was born; and on the eighth day, according to the Jewish practice, he was circumcised and formally named Joshua (Jesus).
 \vs p122 8:3 The next day after the birth of Jesus, Joseph made his enrolment. Meeting a man they had talked with two nights previously at Jericho, Joseph was taken by him to a well\hyp{}to\hyp{}do friend who had a room at the inn, and who said he would gladly exchange quarters with the Nazareth couple. That afternoon they moved up to the inn, where they lived for almost three weeks until they found lodgings in the home of a distant relative of Joseph.
 \vs p122 8:4 The second day after the birth of Jesus, Mary sent word to Elizabeth that her child had come and received word in return inviting Joseph up to Jerusalem to talk over all their affairs with Zacharias. The following week Joseph went to Jerusalem to confer with Zacharias. Both Zacharias and Elizabeth had become possessed with the sincere conviction that Jesus was indeed to become the Jewish deliverer, the Messiah, and that their son John was to be his chief of aides, his right\hyp{}hand man of destiny. And since Mary held these same ideas, it was not difficult to prevail upon Joseph to remain in Bethlehem, the City of David, so that Jesus might grow up to become the successor of David on the throne of all Israel. Accordingly, they remained in Bethlehem more than a year, Joseph meantime working some at his carpenter’s trade.
@@ -64,6 +77,13 @@
 \vs p122 9:1 Moses had taught the Jews that every first\hyp{}born son belonged to the Lord, and that, in lieu of his sacrifice as was the custom among the heathen nations, such a son might live provided his parents would redeem him by the payment of five shekels to any authorized priest. There was also a Mosaic ordinance which directed that a mother, after the passing of a certain period of time, should present herself (or have someone make the proper sacrifice for her) at the temple for purification. It was customary to perform both of these ceremonies at the same time. Accordingly, Joseph and Mary went up to the temple at Jerusalem in person to present Jesus to the priests and effect his redemption and also to make the proper sacrifice to ensure Mary’s ceremonial purification from the alleged uncleanness of childbirth.
 \vs p122 9:2 \pc There lingered constantly about the courts of the temple two remarkable characters, Simeon a singer and Anna a poetess. Simeon was a Judean, but Anna was a Galilean. This couple were frequently in each other’s company, and both were intimates of the priest Zacharias, who had confided the secret of John and Jesus to them. Both Simeon and Anna longed for the coming of the Messiah, and their confidence in Zacharias led them to believe that Jesus was the expected deliverer of the Jewish people.
 \vs p122 9:3 Zacharias knew the day Joseph and Mary were expected to appear at the temple with Jesus, and he had prearranged with Simeon and Anna to indicate, by the salute of his upraised hand, which one in the procession of first\hyp{}born children was Jesus.
+\tunemarkup{private}{%
+\begin{figure}[H]
+\centering
+\includegraphics[scale=\tunemarkup{pgkoboaurahd}{0.64}\tunemarkup{pghanlin}{0.56}\tunemarkup{pgnexus7}{0.55}\tunemarkup{pgkindledx}{0.36}]{../urantia-pictures/William_Hole_Presentation_In_The_Temple_525.jpg}
+\caption{Presentation In The Temple by William~Hole}
+\end{figure}
+}
 \vs p122 9:4 For this occasion Anna had written a poem which Simeon proceeded to sing, much to the astonishment of Joseph, Mary, and all who were assembled in the temple courts. And this was their hymn of the redemption of the first\hyp{}born son:
 \begin{quote}
 \vs p122 9:5 Blessed be the Lord, the God of Israel,
