--- a/tex/p171.tex
+++ b/tex/p171.tex
@@ -41,6 +41,13 @@
 \vs p171 5:1 Late on the afternoon of Thursday, March 30, Jesus and his apostles, at the head of a band of about 200 followers, approached the walls of Jericho. As they came near the gate of the city, they encountered a throng of beggars, among them one Bartimeus, an elderly man who had been blind from his youth. This blind beggar had heard much about Jesus and knew all about his healing of the blind Josiah at Jerusalem. He had not known of Jesus’ last visit to Jericho until he had gone on to Bethany. Bartimeus had resolved that he would never again allow Jesus to visit Jericho without appealing to him for the restoration of his sight.
 \vs p171 5:2 News of Jesus’ approach had been heralded throughout Jericho, and hundreds of the inhabitants flocked forth to meet him. When this great crowd came back escorting the Master into the city, Bartimeus, hearing the heavy tramping of the multitude, knew that something unusual was happening, and so he asked those standing near him what was going on. And one of the beggars replied, “Jesus of Nazareth is passing by.” When Bartimeus heard that Jesus was near, he lifted up his voice and began to cry aloud, “Jesus, Jesus, have mercy upon me!” And as he continued to cry louder and louder, some of those near to Jesus went over and rebuked him, requesting him to hold his peace; but it was of no avail; he cried only the more and the louder.
 \vs p171 5:3 When Jesus heard the blind man crying out, he stood still. And when he saw him, he said to his friends, \textcolour{ubdarkred}{“Bring the man to me.”} And then they went over to Bartimeus, saying: “Be of good cheer; come with us, for the Master calls for you.” When Bartimeus heard these words, he threw aside his cloak, springing forward toward the centre of the road, while those near by guided him to Jesus. Addressing Bartimeus, Jesus said: \textcolour{ubdarkred}{“What do you want me to do for you?”} Then answered the blind man, “I would have my sight restored.” And when Jesus heard this request and saw his faith, he said: \textcolour{ubdarkred}{“You shall receive your sight; go your way; your faith has made you whole.”} Immediately he received his sight, and he remained near Jesus, glorifying God, until the Master started on the next day for Jerusalem, and then he went before the multitude declaring to all how his sight had been restored in Jericho.
+\tunemarkup{private}{%
+\begin{figure}[H]
+\centering
+\includegraphics[scale=\tunemarkup{pgkoboaurahd}{0.65}\tunemarkup{pghanlin}{0.56}\tunemarkup{pgnexus7}{0.58}\tunemarkup{pgkindledx}{0.55}]{../urantia-pictures/Harold_Copping_The_Healing_of_the_Blind_Bartimaeus_525.jpg}
+\caption{The Healing of Blind Bartimaeus by Harold~Copping}
+\end{figure}
+}
 \usection{6.\bibnobreakspace The Visit to Zaccheus}
 \vs p171 6:1 When the Master’s procession entered Jericho, it was nearing sundown, and he was minded to abide there for the night. As Jesus passed by the customs house, Zaccheus the chief publican, or tax collector, happened to be present, and he much desired to see Jesus. This chief publican was very rich and had heard much about this prophet of Galilee. He had resolved that he would see what sort of a man Jesus was the next time he chanced to visit Jericho; accordingly, Zaccheus sought to press through the crowd, but it was too great, and being short of stature, he could not see over their heads. And so the chief publican followed on with the crowd until they came near the centre of the city and not far from where he lived. When he saw that he would be unable to penetrate the crowd, and thinking that Jesus might be going right on through the city without stopping, he ran on ahead and climbed up into a sycamore tree whose spreading branches overhung the roadway. He knew that in this way he could obtain a good view of the Master as he passed by. And he was not disappointed, for, as Jesus passed by, he stopped and, looking up at Zaccheus, said: \textcolour{ubdarkred}{“Make haste, Zaccheus, and come down, for tonight I must abide at your house.”} And when Zaccheus heard these astonishing words, he almost fell out of the tree in his haste to get down, and going up to Jesus, he expressed great joy that the Master should be willing to stop at his house.
 \vs p171 6:2 They went at once to the home of Zaccheus, and those who lived in Jericho were much surprised that Jesus would consent to abide with the chief publican. Even while the Master and his apostles lingered with Zaccheus before the door of his house, one of the Jericho Pharisees, standing near by, said: “You see how this man has gone to lodge with a sinner, an apostate son of Abraham who is an extortioner and a robber of his own people.” And when Jesus heard this, he looked down at Zaccheus and smiled. Then Zaccheus stood upon a stool and said: “Men of Jericho, hear me! I may be a publican and a sinner, but the great Teacher has come to abide in my house; and before he goes in, I tell you that I am going to bestow ½ of all my goods upon the poor, and beginning tomorrow, if I have wrongfully exacted aught from any man, I will restore fourfold. I am going to seek salvation with all my heart and learn to do righteousness in the sight of God.”
