--- a/tex/p196.tex
+++ b/tex/p196.tex
@@ -17,6 +17,13 @@
 \usection{1.\bibnobreakspace Jesus --- The Man}
 \vs p196 1:1 Jesus’ devotion to the Father’s will and the service of man was even more than mortal decision and human determination; it was a wholehearted consecration of himself to such an unreserved bestowal of love. No matter how great the fact of the sovereignty of Michael, you must not take the human Jesus away from men. The Master has ascended on high as a man, as well as God; he belongs to men; men belong to him. How unfortunate that religion itself should be so misinterpreted as to take the human Jesus away from struggling mortals! Let not the discussions of the humanity or the divinity of the Christ obscure the saving truth that Jesus of Nazareth was a religious man who, by faith, achieved the knowing and the doing of the will of God; he was the most truly religious man who has ever lived on Urantia.
 \vs p196 1:2 The time is ripe to witness the figurative resurrection of the human Jesus from his burial tomb amidst the theological traditions and the religious dogmas of 19 centuries. Jesus of Nazareth must not be longer sacrificed to even the splendid concept of the glorified Christ. What a transcendent service if, through this revelation, the Son of Man should be recovered from the tomb of traditional theology and be presented as the living Jesus to the church that bears his name, and to all other religions! Surely the Christian fellowship of believers will not hesitate to make such adjustments of faith and of practices of living as will enable it to “follow after” the Master in the demonstration of his real life of religious devotion to the doing of his Father’s will and of consecration to the unselfish service of man. Do professed Christians fear the exposure of a self\hyp{}sufficient and unconsecrated fellowship of social respectability and selfish economic maladjustment? Does institutional Christianity fear the possible jeopardy, or even the overthrow, of traditional ecclesiastical authority if the Jesus of Galilee is reinstated in the minds and souls of mortal men as the ideal of personal religious living? Indeed, the social readjustments, the economic transformations, the moral rejuvenations, and the religious revisions of Christian civilization would be drastic and revolutionary if the living religion of Jesus should suddenly supplant the theologic religion about Jesus.
+\tunemarkup{private}{%
+\begin{figure}[H]
+\centering
+\includegraphics[scale=\tunemarkup{pgkoboaurahd}{0.53}\tunemarkup{pghanlin}{0.47}\tunemarkup{pgnexus7}{0.47}\tunemarkup{pgkindledx}{0.36}]{../urantia-pictures/Jon_Detoy_Follow_Me_525.jpg}
+\caption{Follow me by Jon~DeToy}
+\end{figure}
+}
 \vs p196 1:3 \pc To “follow Jesus” means to personally share his religious faith and to enter into the spirit of the Master’s life of unselfish service for man. One of the most important things in human living is to find out what Jesus believed, to discover his ideals, and to strive for the achievement of his exalted life purpose. Of all human knowledge, that which is of greatest value is to know the religious life of Jesus and how he lived it.
 \vs p196 1:4 The common people heard Jesus gladly, and they will again respond to the presentation of his sincere human life of consecrated religious motivation if such truths shall again be proclaimed to the world. The people heard him gladly because he was one of them, an unpretentious layman; the world’s greatest religious teacher was indeed a layman.
 \vs p196 1:5 It should not be the aim of kingdom believers literally to imitate the outward life of Jesus in the flesh but rather to share his faith; to trust God as he trusted God and to believe in men as he believed in men. Jesus never argued about either the fatherhood of God or the brotherhood of men; he was a living illustration of the one and a profound demonstration of the other.
