--- a/tex/p043.tex
+++ b/tex/p043.tex
@@ -2,11 +2,20 @@
 \author{Malavatia Melchizedek}
 \vs p043 0:1 Urantia is commonly referred to as 606 of Satania in Norlatiadek of Nebadon, meaning the 606\ts{th} inhabited world in the local system of Satania, situated in the constellation of Norlatiadek, one of the 100 constellations of the local universe of Nebadon. Constellations being the primary divisions of a local universe, their rulers link the local systems of inhabited worlds to the central administration of the local universe on Salvington and by reflectivity to the superadministration of the Ancients of Days on Uversa.
 \vs p043 0:2 \pc The government of your constellation is situated in a cluster of 771 architectural spheres, the centremost and largest of which is Edentia, the seat of the administration of the Constellation Fathers, the Most Highs of Norlatiadek. Edentia itself is approximately 100 times as large as your world. The 70 major spheres surrounding Edentia are about 10 times the size of Urantia, while the 10 satellites which revolve around each of these 70 worlds are about the size of Urantia. These 771 architectural spheres are quite comparable in size to those of other constellations.
-\tunemarkup{private}{\begin{center}\includegraphics[angle=90,scale=\tunemarkup{pgkoboaurahd}{1.89}\tunemarkup{pghanlin}{1.24}\tunemarkup{pgnexus7}{1.88}\tunemarkup{pgkindledx}{1.58}]{../urantia-pictures/EDENTIA_700.jpg}\end{center}}
+\begin{figure}[H]
+\centering
+\includegraphics[angle=90,scale=\tunemarkup{pgkoboaurahd}{1.89}\tunemarkup{pghanlin}{1.75}\tunemarkup{pgnexus7}{1.88}\tunemarkup{pgkindledx}{1.58}]{../urantia-pictures/EDENTIA_700.jpg}
+\caption{Edentia by Gary~Tonge}
+\end{figure}
 \vs p043 0:3 \pc Edentia time reckoning and distance measurement are those of Salvington, and like the spheres of the universe capital, the constellation headquarters worlds are fully supplied with all orders of celestial intelligences. In general, these personalities are not very different from those described in connection with the universe administration.
 \vs p043 0:4 The supervisor seraphim, the third order of local universe angels, are assigned to the service of the constellations. They make their headquarters on the capital spheres and minister extensively to the encircling morontia\hyp{}training worlds. In Norlatiadek the 70 major spheres, together with the 700 minor satellites, are inhabited by the univitatia, the permanent citizens of the constellation. All these architectural worlds are fully administered by the various groups of native life, for the greater part unrevealed but including the efficient spironga and the beautiful spornagia. Being the mid\hyp{}point in the morontia\hyp{}training regime, as you might suspect, the morontia life of the constellations is both typical and ideal.
 \usection{1.\bibnobreakspace The Constellation Headquarters}
 \vs p043 1:1 Edentia abounds in fascinating highlands, extensive elevations of physical matter crowned with morontia life and overspread with spiritual glory, but there are no rugged mountain ranges such as appear on Urantia. There are tens of thousands of sparkling lakes and thousands upon thousands of interconnecting streams, but there are no great oceans nor torrential rivers. Only the highlands are devoid of these surface streams.
+\begin{figure}[H]
+\centering
+\includegraphics[scale=\tunemarkup{pgkoboaurahd}{0.4}\tunemarkup{pghanlin}{0.35}\tunemarkup{pgnexus7}{0.35}\tunemarkup{pgkindledx}{0.27}]{../urantia-pictures/Troy-Bishop/morontia_canyons_700x525h.jpg}
+\caption{Morontia Canyons by Troy~R.~Bishop}
+\end{figure}
 \vs p043 1:2 The water of Edentia and similar architectural spheres is no different from the water of the evolutionary planets. The water systems of such spheres are both surface and subterranean, and the moisture is in constant circulation. Edentia can be circumnavigated via these various water routes, though the chief channel of transportation is the atmosphere. Spirit beings would naturally travel above the surface of the sphere, while the morontia and material beings make use of material and semimaterial means to negotiate atmospheric passage.
 \vs p043 1:3 Edentia and its associated worlds have a true atmosphere, the usual three\hyp{}gas mixture which is characteristic of such architectural creations, and which embodies the two elements of Urantian atmosphere plus that morontia gas suitable for the respiration of morontia creatures. But while this atmosphere is both material and morontial, there are no storms or hurricanes; neither is there summer nor winter. This absence of atmospheric disturbances and of seasonal variation makes it possible to embellish all outdoors on these especially created worlds.
 \vs p043 1:4 The Edentia highlands are magnificent physical features, and their beauty is enhanced by the endless profusion of life which abounds throughout their length and breadth. Excepting a few rather isolated structures, these highlands contain no work of creature hands. Material and morontial ornamentations are limited to the dwelling areas. The lesser elevations are the sites of special residences and are beautifully embellished with both biologic and morontia art.
@@ -16,6 +25,11 @@
 \vs p043 1:8 During your periodic visits to Edentia, though the entire planet is open to your inspection, most of your time will be spent in that administrative triangle whose number corresponds to that of your current residential world. You will always be welcome as an observer in the legislative assemblies.
 \vs p043 1:9 The morontia area assigned to ascending mortals resident on Edentia is located in the mid\hyp{}zone of the 35\ts{th} triangle adjoining the headquarters of the finaliters, situated in the 36\ts{th} triangle. The general headquarters of the univitatia occupies an enormous area in the mid\hyp{}region of the 34\ts{th} triangle immediately adjoining the residential reservation of the morontia citizens. From these arrangements it may be seen that provision is made for the accommodation of at least 70 major divisions of celestial life, and also that each of these 70 triangular areas is correlated with some one of the 70 major spheres of morontia training.
 \vs p043 1:10 The Edentia sea of glass is one enormous circular crystal about 160\,km in circumference and about 48\,km in depth. This magnificent crystal serves as the receiving field for all transport seraphim and other beings arriving from points outside the sphere; such a sea of glass greatly facilitates the landing of transport seraphim.
+\begin{figure}[H]
+\centering
+\includegraphics[scale=\tunemarkup{pgkoboaurahd}{0.98}\tunemarkup{pghanlin}{1.35}\tunemarkup{pgnexus7}{1.45}\tunemarkup{pgkindledx}{1.1}]{../urantia-pictures/Troy-Bishop/blue_grotto_on_the_sea_of_glass_700x525h.jpg}
+\caption{Blue Grotto on the Sea of Glass by Troy~R.~Bishop}
+\end{figure}
 \vs p043 1:11 A crystal field on this order is found on almost all architectural worlds; and it serves many purposes aside from its decorative value, being utilized for portraying superuniverse reflectivity to assembled groups and as a factor in the energy\hyp{}transformation technique for modifying the currents of space and for adapting other incoming physical\hyp{}energy streams.
 \usection{2.\bibnobreakspace The Constellation Government}
 \vs p043 2:1 The constellations are the autonomous units of a local universe, each constellation being administered according to its own legislative enactments. When the courts of Nebadon sit in judgment on universe affairs, all internal matters are adjudicated in accordance with the laws prevailing in the constellation concerned. These judicial decrees of Salvington, together with the legislative enactments of the constellations, are executed by the administrators of the local systems.
