--- a/tex/p148.tex
+++ b/tex/p148.tex
@@ -12,7 +12,13 @@
 \vs p148 1:4 These evangelists, though they taught and preached the gospel, did not baptize believers until after they were later ordained and commissioned by Jesus as the 70 messengers of the kingdom. Only 7 of the large number healed at the sundown scene at this place were to be found among these evangelistic students. The nobleman’s son of Capernaum was one of those trained for gospel service in Peter’s school.
 \usection{2.\bibnobreakspace The Bethsaida Hospital}
 \vs p148 2:1 In connection with the seaside encampment, Elman, the Syrian physician, with the assistance of a corps of 25 young women and 12 men, organized and conducted for four months what should be regarded as the kingdom’s first hospital. At this infirmary, located a short distance to the south of the main tented city, they treated the sick in accordance with all known material methods as well as by the spiritual practices of prayer and faith encouragement. Jesus visited the sick of this encampment not less than three times a week and made personal contact with each sufferer. As far as we know, no so\hyp{}called miracles of supernatural healing occurred among the 1,000 afflicted and ailing persons who went away from this infirmary improved or cured. However, the vast majority of these benefited individuals ceased not to proclaim that Jesus had healed them.
-\tunemarkup{private}{\begin{center}\includegraphics[scale=\tunemarkup{pgkoboaurahd}{0.69}\tunemarkup{pghanlin}{0.61}\tunemarkup{pgnexus7}{0.45}\tunemarkup{pgkindledx}{0.38}]{../urantia-pictures/The_Kingdoms_First_Hospital.jpg}\end{center}}
+\tunemarkup{private}{%
+\begin{figure}[H]
+\centering
+\includegraphics[scale=\tunemarkup{pgkoboaurahd}{0.65}\tunemarkup{pghanlin}{0.57}\tunemarkup{pgnexus7}{0.63}\tunemarkup{pgkindledx}{0.49}]{../urantia-pictures/The_Kingdoms_First_Hospital.jpg}
+\caption{The Kingdom's First Hospital by Russ~Docken}
+\end{figure}
+}
 \vs p148 2:2 Many of the cures effected by Jesus in connection with his ministry in behalf of Elman’s patients did, indeed, appear to resemble the working of miracles, but we were instructed that they were only just such transformations of mind and spirit as may occur in the experience of expectant and faith\hyp{}dominated persons who are under the immediate and inspirational influence of a strong, positive, and beneficent personality whose ministry banishes fear and destroys anxiety.
 \vs p148 2:3 Elman and his associates endeavoured to teach the truth to these sick ones concerning the “possession of evil spirits,” but they met with little success. The belief that physical sickness and mental derangement could be caused by the dwelling of a so\hyp{}called unclean spirit in the mind or body of the afflicted person was well\hyp{}nigh universal.
 \vs p148 2:4 In all his contact with the sick and afflicted, when it came to the technique of treatment or the revelation of the unknown causes of disease, Jesus did not disregard the instructions of his Paradise brother, Immanuel, given ere he embarked upon the venture of the Urantia incarnation. Notwithstanding this, those who ministered to the sick learned many helpful lessons by observing the manner in which Jesus inspired the faith and confidence of the sick and suffering.
@@ -68,6 +74,12 @@
 \usection{9.\bibnobreakspace Healing the Paralytic}
 \vs p148 9:1 On Friday afternoon, October 1, when Jesus was holding his last meeting with the apostles, evangelists, and other leaders of the disbanding encampment, and with the six Pharisees from Jerusalem seated in the front row of this assembly in the spacious and enlarged front room of the Zebedee home, there occurred one of the strangest and most unique episodes of all Jesus’ earth life. The Master was, at this time, speaking as he stood in this large room, which had been built to accommodate these gatherings during the rainy season. The house was entirely surrounded by a vast concourse of people who were straining their ears to catch some part of Jesus’ discourse.
 \vs p148 9:2 While the house was thus thronged with people and entirely surrounded by eager listeners, a man long afflicted with paralysis was carried down from Capernaum on a small couch by his friends. This paralytic had heard that Jesus was about to leave Bethsaida, and having talked with Aaron the stone mason, who had been so recently made whole, he resolved to be carried into Jesus’ presence, where he could seek healing. His friends tried to gain entrance to Zebedee’s house by both the front and back doors, but too many people were crowded together. But the paralytic refused to accept defeat; he directed his friends to procure ladders by which they ascended to the roof of the room in which Jesus was speaking, and after loosening the tiles, they boldly lowered the sick man on his couch by ropes until the afflicted one rested on the floor immediately in front of the Master. When Jesus saw what they had done, he ceased speaking, while those who were with him in the room marveled at the perseverance of the sick man and his friends. Said the paralytic: “Master, I would not disturb your teaching, but I am determined to be made whole. I am not like those who received healing and immediately forgot your teaching. I would be made whole that I might serve in the kingdom of heaven.” Now, notwithstanding that this man’s affliction had been brought upon him by his own misspent life, Jesus, seeing his faith, said to the paralytic: \textcolour{ubdarkred}{“Son, fear not; your sins are forgiven. Your faith shall save you.”}
-\tunemarkup{private}{\begin{center}\includegraphics[scale=\tunemarkup{pgkoboaurahd}{0.6}\tunemarkup{pghanlin}{0.61}\tunemarkup{pgnexus7}{0.57}\tunemarkup{pgkindledx}{0.45}]{../urantia-pictures/Jesus_Heals_The_Paralytic.jpg}\end{center}}
+\tunemarkup{private}{%
+\begin{figure}[H]
+\centering
+\includegraphics[scale=\tunemarkup{pgkoboaurahd}{0.55}\tunemarkup{pghanlin}{0.57}\tunemarkup{pgnexus7}{0.55}\tunemarkup{pgkindledx}{0.48}]{../urantia-pictures/Jesus_Heals_The_Paralytic.jpg}
+\caption{Jesus Heals The Paralytic by Harold~Copping}
+\end{figure}
+}
 \vs p148 9:3 When the Pharisees from Jerusalem, together with other scribes and lawyers who sat with them, heard this pronouncement by Jesus, they began to say to themselves: “How dare this man thus speak? Does he not understand that such words are blasphemy? Who can forgive sin but God?” Jesus, perceiving in his spirit that they thus reasoned within their own minds and among themselves, spoke to them, saying: \textcolour{ubdarkred}{“Why do you so reason in your hearts? Who are you that you sit in judgment over me? What is the difference whether I say to this paralytic, your sins are forgiven, or arise, take up your bed, and walk? But that you who witness all this may finally know that the Son of Man has authority and power on earth to forgive sins, I will say to this afflicted man, Arise, take up your bed, and go to your own house.”} And when Jesus had thus spoken, the paralytic arose, and as they made way for him, he walked out before them all. And those who saw these things were amazed. Peter dismissed the assemblage, while many prayed and glorified God, confessing that they had never before seen such strange happenings.
 \vs p148 9:4 \pc And it was about this time that the messengers of the Sanhedrin arrived to bid the six spies return to Jerusalem. When they heard this message, they fell to earnest debate among themselves; and after they had finished their discussions, the leader and two of his associates returned with the messengers to Jerusalem, while three of the spying Pharisees confessed faith in Jesus and, going immediately to the lake, were baptized by Peter and fellowshipped by the apostles as children of the kingdom.
