--- a/tex/p192.tex
+++ b/tex/p192.tex
@@ -21,7 +21,13 @@
 \vs p192 2:1 When they had finished breakfast, and while the others sat by the fire, Jesus beckoned to Peter and to John that they should come with him for a stroll on the beach. As they walked along, Jesus said to John, \textcolour{ubdarkred}{“John, do you love me?”} And when John answered, “Yes, Master, with all my heart,” the Master said: \textcolour{ubdarkred}{“Then, John, give up your intolerance and learn to love men as I have loved you. Devote your life to proving that love is the greatest thing in the world. It is the love of God that impels men to seek salvation. Love is the ancestor of all spiritual goodness, the essence of the true and the beautiful.”}
 \vs p192 2:2 Jesus then turned toward Peter and asked, \textcolour{ubdarkred}{“Peter, do you love me?”} Peter answered, “Lord, you know I love you with all my soul.” Then said Jesus: \textcolour{ubdarkred}{“If you love me, Peter, feed my lambs. Do not neglect to minister to the weak, the poor, and the young. Preach the gospel without fear or favour; remember always that God is no respecter of persons. Serve your fellow men even as I have served you; forgive your fellow mortals even as I have forgiven you. Let experience teach you the value of meditation and the power of intelligent reflection.”}
 \vs p192 2:3 After they had walked along a little farther, the Master turned to Peter and asked, \textcolour{ubdarkred}{“Peter, do you really love me?”} And then said Simon, “Yes, Lord, you know that I love you.” And again said Jesus: \textcolour{ubdarkred}{“Then take good care of my sheep. Be a good and a true shepherd to the flock. Betray not their confidence in you. Be not taken by surprise at the enemy’s hand. Be on guard at all times --- watch and pray.”}
-\tunemarkup{private}{\begin{center}\includegraphics[scale=\tunemarkup{pgkoboaurahd}{0.53}\tunemarkup{pghanlin}{0.46}\tunemarkup{pgnexus7}{0.46}\tunemarkup{pgkindledx}{0.35}]{../urantia-pictures/The_13th_resurrection_appearance.jpg}\end{center}}
+\tunemarkup{private}{%
+\begin{figure}[H]
+\centering
+\includegraphics[scale=\tunemarkup{pgkoboaurahd}{0.53}\tunemarkup{pghanlin}{0.47}\tunemarkup{pgnexus7}{0.43}\tunemarkup{pgkindledx}{0.35}]{../urantia-pictures/The_13th_resurrection_appearance.jpg}
+\caption{The 13\ts{th} Resurrection Appearance by Del~Parson}
+\end{figure}
+}
 \vs p192 2:4 When they had gone a few steps farther, Jesus turned to Peter and, for the third time, asked, \textcolour{ubdarkred}{“Peter, do you truly love me?”} And then Peter, being slightly grieved at the Master’s seeming distrust of him, said with considerable feeling, “Lord, you know all things, and therefore do you know that I really and truly love you.” Then said Jesus: \textcolour{ubdarkred}{“Feed my sheep. Do not forsake the flock. Be an example and an inspiration to all your fellow shepherds. Love the flock as I have loved you and devote yourself to their welfare even as I have devoted my life to your welfare. And follow after me even to the end.”}
 \vs p192 2:5 Peter took this last statement literally --- that he should continue to follow after him --- and turning to Jesus, he pointed to John, asking, “If I follow on after you, what shall this man do?” And then, perceiving that Peter had misunderstood his words, Jesus said: \textcolour{ubdarkred}{“Peter, be not concerned about what your brethren shall do. If I will that John should tarry after you are gone, even until I come back, what is that to you? Only make sure that you follow me.”}
 \vs p192 2:6 \pc This remark spread among the brethren and was received as a statement by Jesus to the effect that John would not die before the Master returned, as many thought and hoped, to establish the kingdom in power and glory. It was this interpretation of what Jesus said that had much to do with getting Simon Zelotes back into service, and keeping him at work.
@@ -35,6 +41,13 @@
 \vs p192 2:14 \pc It was almost 10:00 when Jesus returned from his visit with the Alpheus twins, and as he left the apostles, he said: \textcolour{ubdarkred}{“Farewell, until I meet you all on the mount of your ordination tomorrow at noontime.”} When he had thus spoken, he vanished from their sight.
 \usection{3.\bibnobreakspace On the Mount of Ordination}
 \vs p192 3:1 At noon on Saturday, April 22, the 11 apostles assembled by appointment on the hill near Capernaum, and Jesus appeared among them. This meeting occurred on the very mount where the Master had set them apart as his apostles and as ambassadors of the Father’s kingdom on earth. And this was the Master’s 14\ts{th} morontia manifestation.
+\tunemarkup{private}{%
+\begin{figure}[H]
+\centering
+\includegraphics[scale=\tunemarkup{pgkoboaurahd}{0.65}\tunemarkup{pghanlin}{0.56}\tunemarkup{pgnexus7}{0.63}\tunemarkup{pgkindledx}{0.55}]{../urantia-pictures/Harold_Copping_Jesus_raised_from_the_dead_525.jpg}
+\caption{Jesus raised from the Dead by Harold~Copping}
+\end{figure}
+}
 \vs p192 3:2 At this time the 11 apostles knelt in a circle about the Master and heard him repeat the charges and saw him re\hyp{}enact the ordination scene even as when they were first set apart for the special work of the kingdom. And all of this was to them as a memory of their former consecration to the Father’s service, except the Master’s prayer. When the Master --- the morontia Jesus --- now prayed, it was in tones of majesty and with words of power such as the apostles had never before heard. Their Master now spoke with the rulers of the universes as one who, in his own universe, had had all power and authority committed to his hand. And these 11 men never forgot this experience of the morontia rededication to the former pledges of ambassadorship. The Master spent just one hour on this mount with his ambassadors, and when he had taken an affectionate farewell of them, he vanished from their sight.
 \vs p192 3:3 \pc And no one saw Jesus for a full week. The apostles really had no idea what to do, not knowing whether the Master had gone to the Father. In this state of uncertainty they tarried at Bethsaida. They were afraid to go fishing lest he come to visit them and they miss seeing him. During this entire week Jesus was occupied with the morontia creatures on earth and with the affairs of the morontia transition which he was experiencing on this world.
 \usection{4.\bibnobreakspace The Lakeside Gathering}
