Explain why omniaphim cannot be Paradise Companions.

--- a/tex/p025.tex
+++ b/tex/p025.tex
@@ -94,7 +94,7 @@
 \vs p025 8:5 \pc If you, as an ascendant mortal, should reach Paradise in the company of the companion or close associate of your earthly career, or if your seraphic guardian of destiny should chance to arrive with you or were waiting for you, then no permanent companion would be assigned you. But if you arrive alone, a companion will certainly welcome you as you awaken on the Isle of Light from the terminal sleep of time. Even if it is known that you will be accompanied by someone of ascendant association, temporary companions will be designated to welcome you to the eternal shores and to escort you to the reservation made ready for the reception of you and your associates. You may be certain of being warmly welcomed when you experience the resurrection into eternity on the everlasting shores of Paradise.
 \vs p025 8:6 Reception companions are assigned during the terminal days of the ascenders’ sojourn on the last circuit of Havona, and they carefully examine the records of mortal origin and eventful ascent through the worlds of space and the circles of Havona. When they greet the mortals of time, they are already well versed in the careers of these arriving pilgrims and immediately prove to be sympathetic and intriguing companions.
 \vs p025 8:7 During your prefinaliter sojourn on Paradise, if for any reason you should be temporarily separated from your associate of the ascending career --- mortal or seraphic --- a Paradise Companion would be forthwith assigned for counsel and companionship. When once assigned to an ascendant mortal of solitary residence on Paradise, the companion remains with this person until he either is rejoined by his ascendant associates or is duly mustered into the Corps of the Finality.
-\vs p025 8:8 \pc Paradise Companions are assigned in order of waiting except that an ascender is never placed in the charge of a companion whose nature is unlike his superuniverse type. If a Urantia mortal were arriving on Paradise today, there would be assigned to him the first waiting companion either of origin in Orvonton or otherwise of the nature of the Seventh Master Spirit. Hence the omniaphim serve not with the ascendant creatures from the seven superuniverses.
+\vs p025 8:8 \pc Paradise Companions are assigned in order of waiting except that an ascender is never placed in the charge of a companion whose nature is unlike his superuniverse type. If a Urantia mortal were arriving on Paradise today, there would be assigned to him the first waiting companion either of origin in Orvonton or otherwise of the nature of the Seventh Master Spirit. Hence the omniaphim serve not with the ascendant creatures\fnst{\textbf{omniaphim serve not with the ascendant creatures}, Because omniaphim are created concertedly by the Infinite Spirit and the Seven Supreme Executives (cf.~\bibref[26:1.13]{p026 1:13}) and therefore their natures are not like a single superuniverse type.} from the seven superuniverses.
 \vs p025 8:9 \pc Many additional services are performed by the Paradise Companions: If an ascending mortal should reach the central universe alone and, while traversing Havona, should fail in some phase of the Deity adventure, in due course he would be remanded to the universes of time, and forthwith a call would be made to the reserves of the Paradise Companions. One of this order would be assigned to follow the defeated pilgrim, to be with him and to comfort and cheer him, and to remain with him until he returned to the central universe to resume the Paradise ascent.
 \vs p025 8:10 If an ascending pilgrim met defeat in the Deity adventure while traversing Havona in the company of an ascending seraphim, the guardian angel of the mortal career, she would elect to accompany her mortal associate. These seraphim always volunteer and are permitted to accompany their long\hyp{}time mortal comrades back to the service of time and space.
 \vs p025 8:11 But not so with two closely associated mortal ascenders: If one attains God while the other temporarily fails, the successful individual invariably chooses to go back to the evolutionary creations with the disappointed personality, but this is not permitted. Instead, a call is made to the reserves of the Paradise Companions, and one of the volunteers is selected to accompany the disappointed pilgrim. A volunteer Paradise Citizen then becomes associated with the successful mortal, who tarries on the central Isle awaiting the Havona return of the defeated comrade and in the meantime teaches in certain Paradise schools, presenting the adventurous story of the evolutionary ascent.
