Clarify the note at 130:7.6

--- a/tex/p130.tex
+++ b/tex/p130.tex
@@ -84,7 +84,7 @@
 \vs p130 7:3 At Carthage Jesus had a long and memorable talk with a Mithraic priest about immortality, about time and eternity. This Persian had been educated at Alexandria, and he really desired to learn from Jesus. Put into the words of today, in substance Jesus said in answer to his many questions:
 \vs p130 7:4 \pc Time is the stream of flowing temporal events perceived by creature consciousness. Time is a name given to the succession\hyp{}arrangement whereby events are recognized and segregated. The universe of space is a time\hyp{}related phenomenon as it is viewed from any interior position outside of the fixed abode of Paradise. The motion of time is only revealed in relation to something which does not move in space as a time phenomenon. In the universe of universes Paradise and its Deities transcend both time and space. On the inhabited worlds, human personality (indwelt and oriented by the Paradise Father’s spirit) is the only physically related reality which can transcend the material sequence of temporal events.
 \vs p130 7:5 Animals do not sense time as does man, and even to man, because of his sectional and circumscribed view, time appears as a succession of events; but as man ascends, as he progresses inward, the enlarging view of this event procession is such that it is discerned more and more in its wholeness. That which formerly appeared as a succession of events then will be viewed as a whole and perfectly related cycle; in this way will circular simultaneity increasingly displace the onetime consciousness of the linear sequence of events.
-\vs p130 7:6 There are seven different conceptions of space as it is conditioned by time\fnst{\textbf{seven different conceptions of space}, These seven dimensions of space are the same as the seven dimensions of human type of personality as explained in \bibref[112:1.9]{p112 1:9}. The perception of the seven dimensions of space is in principle achievable even on the material level of existence, despite the simplistic claim of human mind being ``rigidly space\hyp{}bound'' in \bibref[12:5.5]{p012 5:5}. There is no real contradiction between what the Perfector of Wisdom is teaching us in Paper 12 and what Jesus is teaching the Mithraic magician at Carthage, as long as we understand that the angelic teachings are usually very basic and intended for average or below average level of intellect, whereas Jesus is here addressing a highly advanced magician who may well have mastered both the finite and the absonite levels of reality (i.e. now perceives space in six dimensions) and he is here encouraged by Jesus to not stop there but to pursue on the way of mastery of the seventh, absolute level of reality corresponding to the seventh space dimension.}. Space is measured by time, not time by space. The confusion of the scientist grows out of failure to recognize the reality of space. Space is not merely an intellectual concept of the variation in relatedness of universe objects. Space is not empty, and the only thing man knows which can even partially transcend space is mind\fnst{\textbf{the only thing man knows which can even partially transcend space is mind}, This would directly contradict the statement at \bibref[12:5.5]{p012 5:5}, if we do not take into account what was said in the previous note.}. Mind can function independently of the concept of the space\hyp{}relatedness of material objects. Space is relatively and comparatively finite to all beings of creature status. The nearer consciousness approaches the awareness of seven cosmic dimensions, the more does the concept of potential space approach ultimacy. But the space potential is truly ultimate only on the absolute level.
+\vs p130 7:6 There are seven different conceptions of space as it is conditioned by time\fnst{\textbf{seven different conceptions of space}, These seven dimensions of space are the same as the seven dimensions of human type of personality as explained in \bibref[112:1.9]{p112 1:9}. The perception of the seven dimensions of space is in principle achievable even on the material level of existence, despite the simplistic claim of human mind being ``rigidly space\hyp{}bound'' in \bibref[12:5.5]{p012 5:5}. There is no real contradiction between what the Perfector of Wisdom is teaching us in Paper 12 and what Jesus is teaching the Mithraic mystic at Carthage, as long as we understand that the angelic teachings are usually very basic and intended for average or below average level of intellect, whereas Jesus is here addressing a highly advanced individual who may well have mastered both the finite and the absonite levels of reality (i.e. now perceives space in six dimensions) and he is here encouraged by Jesus to not stop there but to pursue on the way of mastery of the seventh, absolute level of reality corresponding to the seventh space dimension.}. Space is measured by time, not time by space. The confusion of the scientist grows out of failure to recognize the reality of space. Space is not merely an intellectual concept of the variation in relatedness of universe objects. Space is not empty, and the only thing man knows which can even partially transcend space is mind\fnst{\textbf{the only thing man knows which can even partially transcend space is mind}, This would directly contradict the statement at \bibref[12:5.5]{p012 5:5}, if we do not take into account what was said in the previous note.}. Mind can function independently of the concept of the space\hyp{}relatedness of material objects. Space is relatively and comparatively finite to all beings of creature status. The nearer consciousness approaches the awareness of seven cosmic dimensions, the more does the concept of potential space approach ultimacy. But the space potential is truly ultimate only on the absolute level.
 \vs p130 7:7 It must be apparent that universal reality has an expanding and always relative meaning on the ascending and perfecting levels of the cosmos. Ultimately, surviving mortals achieve identity in a seven\hyp{}dimensional universe.
 \vs p130 7:8 \pc The time\hyp{}space concept of a mind of material origin is destined to undergo successive enlargements as the conscious and conceiving personality ascends the levels of the universes. When man attains the mind intervening between the material and the spiritual planes of existence, his ideas of time\hyp{}space will be enormously expanded both as to quality of perception and quantity of experience. The enlarging cosmic conceptions of an advancing spirit personality are due to augmentations of both depth of insight and scope of consciousness. And as personality passes on, upward and inward, to the transcendental levels of Deity\hyp{}likeness, the time\hyp{}space concept will increasingly approximate the timeless and spaceless concepts of the Absolutes. Relatively, and in accordance with transcendental attainment, these concepts of the absolute level are to be envisioned by the children of ultimate destiny.
 \usection{8.\bibnobreakspace On the Way to Naples and Rome}
