--- a/tex/title.tex
+++ b/tex/title.tex
@@ -111,7 +111,7 @@ Cover design by Gary Tonge, www.vision-afar.com.\\
 Please send all comments \&\ suggestions to: {\makeatletter\upshape\bfseries Tigran~Aivazian~<tigran@bibles.org.uk>\makeatother}\\[1pt]
 The latest version of this book can be downloaded from:\\[1ex]
 \shadowbox{\upshape\bfseries http://www.bibles.org.uk}\\
-The apparatus (marked with a circle in the text) contains significant changes made since the 1955 first edition of the Urantia Book.\\
+The apparatus (marked with a circle in the text) contains all significant changes made since the 1955 first edition of the Urantia Book.\\
 The symbol \pc\tunemarkup{pgluluhb}{\kern-2pt} marks the first paragraph in the group as in the first edition, where such groups were delimited by blank lines.\\
 The asterisk * indicates a study note other than a textual variant.\\[5pt]
 \tux\ Typeset with \XeLaTeX\ under Linux.\\
