Get rid of unnecessary \newpage invocations

--- a/urantia-study-edition.tex
+++ b/urantia-study-edition.tex
@@ -8,12 +8,12 @@
 \pagestyle{empty}
 \include{tex/title}\newpage
 \pagestyle{fancy}
-\tunemarkup{pghanlin}{\fancyhead[C]{\bibheadfont THE TITLES OF THE PAPERS}\bibtableofcontents\null\newpage}
-\tunemarkup{pgnexus7}{\fancyhead[C]{\bibheadfont THE TITLES OF THE PAPERS}\bibtableofcontents\null\newpage}
-\tunemarkup{pgkoboaurahd}{\fancyhead[C]{\bibheadfont THE TITLES OF THE PAPERS}\bibtableofcontents\null\newpage}
+\tunemarkup{pghanlin}{\fancyhead[C]{\bibheadfont THE TITLES OF THE PAPERS}\bibtableofcontents{}}
+\tunemarkup{pgnexus7}{\fancyhead[C]{\bibheadfont THE TITLES OF THE PAPERS}\bibtableofcontents{}}
+\tunemarkup{pgkoboaurahd}{\fancyhead[C]{\bibheadfont THE TITLES OF THE PAPERS}\bibtableofcontents{}}
 \tunemarkup{pgkindledx}{\include{tex/paper-titles}}
 \listoffigures\newpage
-\include{tex/intro}\newpage
+\include{tex/intro}
 \include{tex/p000}
 \include{tex/p001}
 \include{tex/p002}
